<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/home"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#fece2f"
            android:padding="20dp">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/user_image"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/field_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_name"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/user_image"
                android:includeFontPadding="false"
                android:text="@string/member"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_width="match_parent"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                app:cardBackgroundColor="#fece2f"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_centerHorizontal="true"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:src="@drawable/ic_baseline_monitor_weight_24"
                        android:contentDescription="@string/exercise" />

                    <EditText
                        android:id="@+id/weight_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/_60"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:inputType="number"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/weight_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/weight_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/weight_kg"
                        android:textSize="20sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                app:cardBackgroundColor="#fece2f"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_centerHorizontal="true"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:src="@drawable/ic_baseline_height_24"
                        android:contentDescription="@string/exercise" />

                    <EditText
                        android:id="@+id/height_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/_172"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:inputType="number"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/height_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/height_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/height_cm"
                        android:textSize="20sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/full_name"
                android:id="@+id/full_name_profile"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email"
                android:id="@+id/profile_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/contact"
                android:id="@+id/contact_profile"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:drawableStart="@drawable/ic_baseline_security_24"
                    android:drawablePadding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="20dp">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="21dp"
                android:text="@string/sign_out"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="131dp"
                android:text="@string/update" />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>