<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BMI">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_line_center"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/line_vertical_center">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/layout_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@id/line_vertical_center"
        android:background="@drawable/black_card_back_ground">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@id/male_text"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/male_icon">

        </ImageView>

        <TextView
            android:id="@+id/male_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/layout_height"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/line_vertical_center"
        android:background="@drawable/black_card_back_ground"
        android:layout_marginLeft="20dp"
        android:id="@+id/female">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:layout_above="@id/female_text"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female_icon"
            android:contentDescription="@string/image">

        </ImageView>

        <TextView
            android:id="@+id/female_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/female_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/horizontal_line_center"
        android:layout_marginBottom="-50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/black_card_back_ground"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/layout_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/height"
            android:textSize="20sp">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_height"
            android:layout_marginBottom="50dp"
            android:textSize="40sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:id="@+id/current_ht"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/current_ht"
            android:layout_marginStart="20dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white" />


        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white"
            android:layout_marginRight="10dp"
            android:id="@+id/ht_seek_bar">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/bmi_calc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_back_ground"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>



    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/line_vertical_center"
        android:background="@drawable/black_card_back_ground"
        android:layout_below="@id/layout_height"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/weight">


        <TextView
            android:id="@+id/weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/weight_curr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plus_minus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus_plus"
                android:id="@+id/decrement_weight"
                android:contentDescription="@string/image">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plus_minus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/increase_wt"

                android:src="@drawable/addition"
                android:contentDescription="@string/image">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/line_vertical_center"
        android:background="@drawable/black_card_back_ground"
        android:layout_below="@id/layout_height"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/Age">



        <TextView

            android:id="@+id/age_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>

        <TextView
            android:id="@+id/curr_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_age"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plus_minus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus_plus"
                android:id="@+id/decrement_age"

                android:contentDescription="@string/image">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plus_minus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/increment_age"
                android:src="@drawable/addition"
                android:contentDescription="@string/image">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>